Fixed activity section messing up previous layout breakpoints.
git-svn-id: https://svn.crebit.ee/internal/brainstorm@171 a47fb915-6441-4bf9-b1ea-8e8557306987

--- a/public/plugins/modals/modals.css
+++ b/public/plugins/modals/modals.css
@@ -3,8 +3,8 @@
   display: none;
   position: fixed;
   background: white;
-  min-width: 480px;
-  max-width: 600px;
+  min-width: 600px;
+  max-width: 800px;
   z-index: 2;
   transition-property: top, left;
   transition-duration: 0.33s;
