--- a/public/styles/ideas-list.css
+++ b/public/styles/ideas-list.css
@@ -43,7 +43,7 @@
 #ideas-list h3 {
   font-size: 32px;
   font-weight: 300;
-  margin-bottom: 10px;
+  margin: 0 -20px 10px;
   word-wrap: break-word;
 }
 
@@ -97,7 +97,7 @@
 }
 
 /** Single column layout */
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   #ideas-list > li {
     margin-bottom: 20px;
     width: 100%;
@@ -105,7 +105,7 @@
 }
 
 /** Two-column layout */
-@media (min-width: 801px) and (max-width: 1100px) {
+@media (min-width: 701px) and (max-width: 1300px) {
   #ideas-list > li {
     margin: .5% 2% 20px;
     width: 46%;
@@ -113,7 +113,7 @@
 }
 
 /** Three-column layout */
-@media (min-width: 801px) and (max-width: 1550px), (min-width: 1700px) {
+@media (min-width: 1301px) and (max-width: 1550px), (min-width: 1700px) {
   .entry-data li {
     display: block;
     margin: 0 !important;
@@ -123,6 +123,13 @@
 @media (min-width: 1700px) {
   #ideas-list > li {
     width: 22%;
+  }
+}
+
+/** Responsive */
+@media (max-width: 1000px) {
+  #ideas-list {
+    width: 98% !important;
   }
 }
 
